Removed fxLayout and fixed layout issues

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,6 +28,10 @@ h2 {
 }
 
 .projects {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 
     .mat-card {
         width: 400px;
