--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,5 +1,8 @@
 footer {
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    color: #969a9e;
     background-color: #262727;
+    color: #969a9e;
+    display: flex;
+    flex-direction: row;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    justify-content: space-evenly;
 }
